hphp/hack/test/typecheck/nullable_tparam.php.like_types.exp
File "nullable_tparam.php", line 5, characters 19-19:
Invalid argument (Typing[4110])
File "nullable_tparam.php", line 3, characters 27-28:
Expected ?[unresolved]
File "nullable_tparam.php", line 5, characters 19-19:
But got T
